--- a/Web/Components/Features/Categories/Details.razor
+++ b/Web/Components/Features/Categories/Details.razor
@@ -1,10 +1,16 @@
 @page "/categories/{id:guid}"
-@using Domain.Entities
+
 @inject NavigationManager Navigation
+@inject ICategoryService CategoryService
+@attribute [Authorize(Roles = "Admin")]
 
-<PageHeadingComponent Title="Category Details"/>
+<PageHeadingComponent HeaderText="Category Details" Level="1" TextColorClass="blue-500"/>
 
-@if (_category is null)
+@if (_isLoading)
+{
+	<LoadingComponent/>
+}
+else if (_category is null)
 {
 	<p>Category not found.</p>
 }
@@ -12,30 +18,82 @@ else
 {
 	<div class="card">
 		<div class="card-body">
-			<h2>@_category.Name</h2>
+			<h2>@_category?.Name</h2>
+			@if (_category?.CreatedOn != null)
+			{
+				<div>Created On: @_category.CreatedOn.ToString("M/d/yyyy", CultureInfo.InvariantCulture)</div>
+			}
+			@if (_category?.ModifiedOn != null)
+			{
+				<div>Modified On: @_category.ModifiedOn?.ToString("M/d/yyyy", CultureInfo.InvariantCulture)</div>
+			}
 			<button class="btn btn-secondary" @onclick="GoToEdit">Edit</button>
-			<button class="btn btn-light" @onclick="GoToList">Back to List</button>
+			<button class="btn btn-light ms-2" type="button" @onclick="GoToList">Back to List</button>
 		</div>
 	</div>
 }
 
 @code {
 
-	[Parameter] public Guid Id { get; set; }
+	/// <summary>
+	///   The unique identifier of the category to display.
+	/// </summary>
+	[Parameter]
+	public Guid Id { get; set; }
 
-	private Category? _category;
+	/// <summary>
+	///   The category data to be displayed on the page.
+	/// </summary>
+	private CategoryDto? _category;
 
+	/// <summary>
+	///   Indicates whether the component is currently loading data.
+	/// </summary>
+	private bool _isLoading = true;
+
+	/// <summary>
+	///   Initializes the component by loading the category data using the CategoryService.
+	/// </summary>
 	protected override void OnInitialized()
 	{
-		// Replace it with a real data source
-		_category = FakeCategory.GetNewCategory(true);
+
+		try
+		{
+			var result = CategoryService.GetAsync(Id).Result;
+
+			if (result is { Success: true, Value: not null })
+			{
+				_category = result.Value;
+			}
+			else
+			{
+				Console.WriteLine(result.Error ?? "An error occurred while fetching the category.");
+				_category = null;
+			}
+		}
+		catch (Exception ex)
+		{
+			Console.WriteLine($"Exception occurred: {ex.Message}");
+			_category = null;
+		}
+		finally
+		{
+			_isLoading = false;
+		}
+
 	}
 
+	/// <summary>
+	///   Navigates to the edit page for the current category.
+	/// </summary>
 	private void GoToEdit()
 	{
 		Navigation.NavigateTo($"/categories/edit/{Id}");
 	}
 
+	/// <summary>
+	///   Navigates back to the category list page.
+	/// </summary>
 	private void GoToList()
 	{
 		Navigation.NavigateTo("/categories");
