--- a/Web/Components/Layout/MainLayout.razor
+++ b/Web/Components/Layout/MainLayout.razor
@@ -1,23 +1,22 @@
 ﻿@inherits LayoutComponentBase
 
-<div class="antialiased bg-gray-800 text-gray-100">
+<CascadingAuthenticationState>
+	<div class="antialiased bg-gray-800 text-gray-100">
+		<div class="flex flex-col min-h-screen space-y-4">
+			<NavMenuComponent/>
 
-	<div class="flex flex-col min-h-screen space-y-4">
+			<main class="container flex-1 max-w-7xl px-4 mx-auto space-y-2 xl:max-w-7xl">
+				<ErrorBoundary>
+					<ChildContent>
+						@Body
+					</ChildContent>
+					<ErrorContent>
+						<ErrorPageComponent ErrorCode="500" ErrorMessage="An unexpected error occurred."/>
+					</ErrorContent>
+				</ErrorBoundary>
+			</main>
 
-		<NavMenuComponent/>
-
-		<main class="container flex-1 max-w-7xl px-4 mx-auto space-y-2 xl:max-w-7xl">
-			@Body
-		</main>
-
-		<FooterComponent/>
-
+			<FooterComponent/>
+		</div>
 	</div>
-
-</div>
-
-<div id="blazor-error-ui">
-	An unhandled error has occurred.
-	<a href="" class="reload">Reload</a>
-	<a class="dismiss">🗙</a>
-</div>
+</CascadingAuthenticationState>
