--- a/Web/Components/Layout/NavMenuComponent.razor
+++ b/Web/Components/Layout/NavMenuComponent.razor
@@ -18,7 +18,7 @@
 					<a href="/article-overview" class="p-1 hover:text-blue-700">My Articles</a>
 				</Authorized>
 			</AuthorizeView>
-			<Login/>
+			<LoginComponent/>
 		</div>
 	</div>
 </header>
