--- a/Web/Components/Features/Articles/List.razor
+++ b/Web/Components/Features/Articles/List.razor
@@ -1,40 +1,108 @@
 @page "/articles"
-@using Domain.Entities
+
 @inject NavigationManager Navigation
+@inject IArticleService ArticleService
+@attribute [Authorize]
 
-<PageHeadingComponent Title="Articles"/>
+<PageHeadingComponent HeaderText="Articles" Level="1" TextColorClass="blue-500"/>
 
-<SfGrid DataSource="_articles" AllowPaging="true" AllowSorting="true">
-	<GridColumns>
-		<GridColumn Field="Title" HeaderText="Title" Width="200" TextAlign="TextAlign.Left"/>
-		<GridColumn Field="Introduction" HeaderText="Intro" Width="250" TextAlign="TextAlign.Left"/>
-		<GridColumn Field="IsPublished" HeaderText="Published" Width="100" TextAlign="TextAlign.Center"/>
-		<GridColumn Field="PublishedOn" HeaderText="Published On" Width="150" Format="d" TextAlign="TextAlign.Center"/>
-		<GridColumn HeaderText="Actions" Width="150">
-			<Template Context="article">
-				<button class="btn btn-sm btn-primary" @onclick="() => GoToDetails(((Article)article).UrlSlug)">Details</button>
-				<button class="btn btn-sm btn-secondary" @onclick="() => GoToEdit(((Article)article).UrlSlug)">Edit</button>
-			</Template>
-		</GridColumn>
-	</GridColumns>
-</SfGrid>
 
+@if (_isLoading)
+{
+	<LoadingComponent/>
+}
+else if (_articles == null || !_articles.Any())
+{
+	<div class="alert alert-info">
+		No articles available.
+		<button class="btn btn-success mt-3" @onclick="GoToCreate">Create New Category</button>
+	</div>
+}
+else
+{
+	<QuickGrid Class="table" Items="_articles" Pagination="_pagination">
+		<PropertyColumn Property="article => article.Title" Sortable="true"/>
+		<PropertyColumn Property="article => article.Introduction" Title="Release Date"/>
+		<PropertyColumn Property="article => article.Content"/>
+		<PropertyColumn Property="article => article.Category.Name"/>
+		<PropertyColumn Property="article => article.Content"/>
+		<PropertyColumn Property="article => article.CreatedOn" Title="Created On" Format="{0:d}"/>
+		<PropertyColumn Property="article => article.ModifiedOn" Title="Modified On" Format="{0:d}"/>
+		<PropertyColumn Property="article => article.IsPublished" Title="Published"/>
+		<PropertyColumn Property="article => article.PublishedOn" Title="Published On" Format="{0:d}"/>
+		<PropertyColumn Property="article => article.Author.UserName" Title="Author"/>
+
+		<TemplateColumn Context="article">
+			<a href="@($"articles/edit?id={article.Id}")">Edit</a> |
+			<a href="@($"articles/details?id={article.Id}")">Details</a> |
+			<a href="@($"articles/delete?id={article.Id}")">Delete</a>
+		</TemplateColumn>
+	</QuickGrid>
+}
 <button class="btn btn-success mt-3" @onclick="GoToCreate">Create New Article</button>
 
 @code {
 
-	private readonly List<ArticleDto> _articles = FakeArticleDto.GetArticleDtos(10);
+	/// <summary>
+	///   The list of articles to display.
+	/// </summary>
+	private IQueryable<ArticleDto>? _articles;
 
-	private void GoToDetails(string slug)
+	/// <summary>
+	///   Pagination state for the article's list.
+	/// </summary>
+	private readonly PaginationState _pagination = new()  { ItemsPerPage = 5 };
+
+	/// <summary>
+	///   Indicates whether the page is loading data.
+	/// </summary>
+	private bool _isLoading = true;
+
+	/// <summary>
+	///   Called when the component is initialized. Loads all categories for display.
+	/// </summary>
+	protected override async Task OnInitializedAsync()
 	{
-		Navigation.NavigateTo($"/articles/{slug}");
+		await base.OnInitializedAsync();
+
+		try
+		{
+			var resultTask = ArticleService?.GetAllAsync();
+
+			if (resultTask is null)
+			{
+				_articles = null;
+				_isLoading = false;
+
+				return;
+			}
+
+			var result = await resultTask;
+
+			if (result is not null && result.Success)
+			{
+				_articles = result.Value?.AsQueryable();
+			}
+			else
+			{
+				Console.WriteLine(result?.Error ?? "An error occurred while fetching articles.");
+				_articles = null;
+			}
+		}
+		catch (Exception ex)
+		{
+			Console.WriteLine(ex);
+			_articles = null;
+		}
+		finally
+		{
+			_isLoading = false;
+		}
 	}
 
-	private void GoToEdit(string slug)
-	{
-		Navigation.NavigateTo($"/articles/edit/{slug}");
-	}
-
+	/// <summary>
+	///   Navigates to the creation category page.
+	/// </summary>
 	private void GoToCreate()
 	{
 		Navigation.NavigateTo("/articles/create");
