--- a/Web/Components/Shared/PageHeaderComponent.razor
+++ b/Web/Components/Shared/PageHeaderComponent.razor
@@ -1,30 +1,32 @@
 <header class="shadow-lg">
 
 	<div class="mx-auto 
-	max-w-7xl py-2 
-	sm:px-4 
-	md:px-6 
-	lg:px-8 
-	rounded-b-md 
-	shadow-md shadow-blue-500">
+		max-w-7xl 
+		p-1
+		sm:px-4 
+		md:px-6 
+		lg:px-8 
+		rounded-md 
+		shadow-md 
+		shadow-blue-500">
 
 		@switch (Level)
 		{
 			case "1":
 
-				<h1 class="text-2xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h1>
+				<h1 class="text-2xl font-bold tracking-tight text-gray-50">@HeaderText</h1>
 
 				break;
 
 			case "2":
 
-				<h2 class="text-3xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h2>
+				<h2 class="text-3xl font-bold tracking-tight text-gray-50">@HeaderText</h2>
 
 				break;
 
 			case "3":
 
-				<h3 class="text-2xl font-bold tracking-tight text-gray-50 py-4">@HeaderText</h3>
+				<h3 class="text-2xl font-bold tracking-tight text-gray-50">@HeaderText</h3>
 
 				break;
 		}
