--- a/Web/Components/_Imports.razor
+++ b/Web/Components/_Imports.razor
@@ -1,11 +1,13 @@
 ﻿@using System.Globalization
 @using System.Net.Http
 @using System.Net.Http.Json
+@using Domain.Entities
 @using Domain.Fakes
 @using Domain.Helpers
 @using Domain.Interfaces
 @using Domain.Models
 @using Mapster
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
@@ -13,11 +15,9 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.OutputCaching
 @using Microsoft.JSInterop
-@using Syncfusion.Blazor
-@using Syncfusion.Blazor.DropDowns
-@using Syncfusion.Blazor.Grids
-@using Syncfusion.Blazor.Navigations
 @using Web
 @using Web.Components
+@using Web.Components.Layout
 @using Web.Components.Shared
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Microsoft.AspNetCore.Components.QuickGrid
