--- a/Web/Components/Pages/Contact.razor
+++ b/Web/Components/Pages/Contact.razor
@@ -1,6 +1,6 @@
 @page "/contact"
 
-<PageHeadingComponent Level="1" HeaderText="Contacts"/>
+<PageHeadingComponent Level="1" HeaderText="@_pageTitle"/>
 
 <div class="prose max-w-2xl mx-auto text-gray-100 bg-gray-800 rounded-md shadow-md p-6 mt-6">
 	<h2 class="text-xl font-bold mb-2">@_pageTitle</h2>
@@ -19,6 +19,6 @@
 
 @code {
 
-	private const string _pageTitle = "Contact - TailwindBlog";
+	private const string _pageTitle = "Contacts";
 
 }
