--- a/Web/Components/Shared/LoginComponent.razor
+++ b/Web/Components/Shared/LoginComponent.razor
@@ -1,8 +1,8 @@
 <AuthorizeView>
 	<Authorized>
-		<a href="Account/Logout">Log out</a>
+		<a href="Account/Logout" class="p-1 hover:text-blue-700">Log out</a>
 	</Authorized>
 	<NotAuthorized>
-		<a href="Account/Login">Log in</a>
+		<a href="Account/Login" class="p-1 hover:text-blue-700">Log in</a>
 	</NotAuthorized>
 </AuthorizeView>
