--- a/Web/Components/App.razor
+++ b/Web/Components/App.razor
@@ -8,7 +8,7 @@
 	<base href="/"/>
 	<link rel="stylesheet" href="@Assets["css/app.css"]"/>
 	<link rel="stylesheet" href="@Assets["Web.styles.css"]"/>
-	<link rel="stylesheet" href="_content/Syncfusion.Blazor.Themes/tailwind.css"/>"/>
+	<link rel="stylesheet" href="_content/Syncfusion.Blazor.Themes/tailwind.css"/>
 
 	<ImportMap/>
 	<link rel="icon" type="image/png" href="favicon.png"/>
