--- a/Web/Components/Features/Articles/List.razor
+++ b/Web/Components/Features/Articles/List.razor
@@ -4,8 +4,7 @@
 @inject IArticleService ArticleService
 @attribute [Authorize]
 
-<PageHeadingComponent HeaderText="Articles" Level="1" TextColorClass="blue-500"/>
-
+<PageHeadingComponent Level="1" HeaderText="@_pageTitle"/>
 
 @if (_isLoading)
 {
@@ -42,6 +41,7 @@ else
 <button class="btn btn-success mt-3" @onclick="GoToCreate">Create New Article</button>
 
 @code {
+		private const string _pageTitle = "Articles - TailwindBlog";
 
 	/// <summary>
 	///   The list of articles to display.
