--- a/Web/Components/Layout/NavMenuComponent.razor
+++ b/Web/Components/Layout/NavMenuComponent.razor
@@ -8,14 +8,11 @@
 			</AuthorizeView>
 			<a href="/articles" class="p-1 hover:text-blue-700">Articles</a>
 			<a href="/categories" class="p-1 hover:text-blue-700">Categories</a>
-			<a href="/contact" class="p-1 hover:text-blue-700">Contact</a>
-			@* <a href="/profile" class="p-1 hover:text-blue-700">Profile</a> *@
 			<a href="/about" class="p-1 hover:text-blue-700">About</a>
+			<a href="/contact" class="p-1 hover:text-blue-700">Contacts</a>
 			<AuthorizeView>
 				<Authorized>
-					<a href="/user-overview" class="p-1 hover:text-blue-700">Users</a>
-
-					<a href="/article-overview" class="p-1 hover:text-blue-700">My Articles</a>
+					<a href="/profile" class="p-1 hover:text-blue-700">Profile</a>
 				</Authorized>
 			</AuthorizeView>
 			<LoginComponent/>
